--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "http://webtorrent.io",
   "main": "index.js",
   "dependencies": {
+    "chrome-net": "1.x",
     "mkdirp": "~0.3.5"
   },
   "devDependencies": {
@@ -15,6 +16,7 @@
     "test": "vows test/*-test.js --spec"
   },
   "browser": {
+    "net": "./node_modules/chrome-net/index.js"
   },
   "repository": {
     "type": "git",
