--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "chrome-portfinder",
   "version": "0.1.0",
-  "description": "Find an open port on the current machine (for Chrome apps)",
+  "description": "Find an open port on the current machine (for Chrome Apps)",
   "homepage": "http://webtorrent.io",
   "main": "index.js",
   "dependencies": {
-    "chrome-net": "1.x",
-    "mkdirp": "~0.3.5"
+    "chrome-net": "1.x"
   },
   "devDependencies": {
     "async": "~0.2.10",
-    "vows": "~0.7.x"
+    "once": "~1.3.0",
+    "envify": "~1.0.1",
+    "browserify": "~3.24.8",
+    "portfinder": "~0.2.1",
+    "tape": "~2.4.0"
   },
   "scripts": {
     "test": "vows test/*-test.js --spec"
