--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "chrome-net": "2.x"
   },
   "devDependencies": {
-    "async": "~0.2.10",
+    "async": "^0.9.0",
     "browserify": "~3.24.8",
     "envify": "~1.0.1",
     "once": "~1.3.0",
