--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "devDependencies": {
     "async": "^0.9.0",
     "browserify": "~3.24.8",
-    "envify": "~1.0.1",
+    "envify": "^3.4.0",
     "once": "~1.3.0",
     "portfinder": "~0.2.1",
     "tape": "^4.0.0"
