--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "async": "^0.9.0",
-    "browserify": "~3.24.8",
+    "browserify": "^10.1.0",
     "envify": "^3.4.0",
     "once": "~1.3.0",
     "portfinder": "~0.2.1",
