--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "browserify": "^10.1.0",
     "envify": "^3.4.0",
     "once": "~1.3.0",
-    "portfinder": "~0.2.1",
+    "portfinder": "^0.4.0",
     "tape": "^4.0.0"
   },
   "homepage": "http://webtorrent.io",
