--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "envify": "^3.4.0",
     "once": "~1.3.0",
     "portfinder": "^0.4.0",
+    "standard": "^12.0.1",
     "tape": "^4.0.0"
   },
   "keywords": [
@@ -40,6 +41,7 @@
     "url": "git://github.com/feross/chrome-portfinder.git"
   },
   "scripts": {
-    "test": "tape test/*.js"
+    "test": "standard",
+    "test-browser": "tape test/*.js"
   }
 }
