--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "async": "^0.9.0",
     "browserify": "^10.1.0",
     "envify": "^3.4.0",
-    "once": "~1.3.0",
+    "once": "^1.3.0",
     "portfinder": "^0.4.0",
     "standard": "^12.0.1",
     "tape": "^4.0.0"
